# TermiDL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/termidl/: __main__.py  app.py  config.py
src/termidl/downloaders/: aria2.py  base.py  ytdlp.py
