[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termidl"
version = "2.0.0"
description = "A modern terminal-based download manager"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual",
    "yt-dlp",
]
authors = [
  {name = "Arpit Dwivedi", email = "arpitdwivedi1185@gmail.com"},
]

[project.scripts]
termidl = "termidl.app:run"

[tool.setuptools.packages.find]
where = ["src"]
